# simple_baby_tracker

./: .firebaserc  .gitignore  .pdm-python  README.md  firebase.json  package-lock.json  package.json  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
functions/: deona.py  main.py  requirements.txt
public/: global.css  index.html
src/: App.svelte  ConfirmModal.svelte  DeonaPage.svelte  FoodEntry.svelte  FoodInput.svelte  Navbar.svelte  SleepEntry.svelte  SleepInput.svelte  StatsBar.svelte  StatsPage.svelte  TimerPage.svelte  editUtils.js  firebase.js  foodInput.svelte  stores.js  utils.js
